<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Welcome, please login to use your account."
    android:id="@+id/textView3"
    android:layout_gravity="left|center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Username:"
        android:id="@+id/textView"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView2"/>

    <EditText
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:minWidth="80dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_gravity="left|center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password:"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/editUsername"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/button"/>

    <Button
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/button"
        android:onClick="doLoginButton_click"
        android:layout_marginLeft="-2dp"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="-3dp"
        android:layout_gravity="left|center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New User?"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:id="@+id/signup_button"
        android:onClick="doSignupButton_click"
        android:layout_marginLeft="-2dp"
        android:layout_gravity="left|center_vertical"/>

    <TextView
        android:id="@+id/invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:text=""
        android:textColor="?attr/colorError" />

</LinearLayout>