<resources>
    <string name="app_name">College Railroad</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_search_isbn">Search</string>
    <string name="title_activity_edit_profile">Update Profile</string>
    <string name="title_activity_camera2">Camera</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_home">Home</string>
    <string name="action_profile">My Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_login1">Login</string>
    <string name="title_activity_add_article">Add Article</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
